syntax = "proto3";

package pad.cache.proto;

option go_package = "pad/services/cache/proto/cache";

import "google/protobuf/empty.proto";
import "common.proto";

service Cache {
  rpc AddListing(AddListingRequest) returns (google.protobuf.Empty) {}
  rpc GetListingByTitle(GetListingByTitleRequest) returns (GetListingByTitleResponse) {}
  rpc GetListingByID(GetListingByIDRequest) returns (GetListingByIDResponse) {}
}

message AddListingRequest {
  pad.common.Listing listing = 1;
  uint32 id = 2;
}

message GetListingByTitleRequest {
  string title = 1;
}

message GetListingByTitleResponse {
  pad.common.Listing listing = 1;
}

message GetListingByIDRequest {
  uint32 id = 1;
}

message GetListingByIDResponse {
  pad.common.Listing listing = 1;
}
